kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01 # Name of the Service
spec:
  ports:
    - port: 11211 # The port the Service itself exposes
      targetPort: vpromc-port # The port on the backend Pods to forward traffic to
      protocol: TCP
  selector:
    app: vpromc
  type: ClusterIP
